# romi-js-core-interfaces

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .versionrc.js  CHANGELOG.md  CMakeLists.txt  README.md  colcon.pkg  karma.conf.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: master.yml  pull-requests.yml
docs/: globals.html  index.html
docs/classes/: accel.html  accelstamped.html  accelwithcovariance.html  accelwithcovariancestamped.html  affineimage.html  asset.html  behavior.html  behaviorparameter.html  bool.html  buildingmap.html  byte.html  bytemultiarray.html  char.html  circle.html  colorrgba.html  convexshape.html  convexshapecontext.html  delivery.html  destinationrequest.html  dispenserrequest.html  dispenserrequestitem.html  dispenserresult.html  dispenserstate.html  door.html  doormode.html  doorrequest.html  doorsessions.html  doorstate.html  duration.html  empty.html  fleetstate.html  float32.html  float32multiarray.html  float64.html  float64multiarray.html  getbuildingmap.html  getbuildingmap_request.html  getbuildingmap_response.html  graph.html  graphedge.html  (+126 more)
docs/enums/: durabilitypolicy.html  historypolicy.html  reliabilitypolicy.html
docs/interfaces/: options.html  publisher.html  qospolicy.html  romiservice.html  romitopic.html  service.html  subscription.html  transport.html  transportevents.eventemitterstatic.html  transportevents.listenerfn.html
examples/: open-doors.ts  request-lift.ts  track-robot.ts
lib/: core-interfaces.ts  index.ts  util.ts
scripts/: build-prepare.sh  build-project.sh  build.sh  compress.sh  gentypes.py  prerelease.js  sync.sh  update-types.sh
spec/: rcl-transport.spec.ts  romi-core.spec.js  skipValidation.spec.ts
templates/: index.j2  srv-ts-definition.j2  ts-definition.j2
transport/: index.ts
(+12 files in other folders)
